ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__Batch__c/fields/bde__Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>bde__Batch_Status__c</fullName>
    <label>Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>