ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__Batch__c/fields/bde__Description__c.field-meta.xml
<CustomField>
    <fullName>bde__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>