ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__Batch__c/fields/bde__Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>bde__Number_of_Items__c</fullName>
    <label>Number of Items</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>