ShakeCharity/ShakeSharityApp/force-app/main/default/objects/bde__Batch__c/listViews/bde__All.listView-meta.xml
<ListView>
    <fullName>bde__All</fullName>
    <columns>NAME</columns>
    <columns>bde__Batch_Status__c</columns>
    <columns>bde__Object_Name__c</columns>
    <columns>bde__Number_of_Items__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>bde__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>